Change usages of Paths.get() to Path.of()